--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h6>THIS IS MY PAGE</h6>
 <P>this is my first pharagraph</P>
 <p>this is my second pharagraph</p>
-<a href="https://www.bing.com/search?qs=HS&pq=em&sk=CSYN1UAS8AS10FT3&sc=25-2&pglt=297&q=email+login&cvid=5bc7cce142674614aedb3ad26c5f2c8b&gs_lcrp=EgRlZGdlKgkIABBFGDsY-QcyCQgAEEUYOxj5BzIGCAEQRRg5MgYIAhAAGEAyBggDEAAYQDIGCAQQLhhAMgYIBRAuGEAyBggGEC4YQDIGCAcQABhAMgYICBBFGDzSAQgyNTY3ajBqMagCCLACAQ&FORM=ANNTA1&PC=U531#e.com/">click to open</a>
+<a href="https://pngtree.com/freepng/modern-laptop-computer-with-screen-open-technology-digital-device_21059292.html">click to open</a>
 <img src="car.png" alt="car from file" sizes="200" width="500" >
 <img src="girl.jpeg" alt="screenshot" sizes="200" width="200">
 </body>
