--- a/About.html
+++ b/About.html
@@ -7,13 +7,21 @@
     <title>Document about me </title>
 </head>
 
-<body>
-    <h1>ADIAMO BANKOLE</h1>
-    <p>my name is bankole, i am a student of execute tech academy</p>
-    <p>i am here to learn about front-end</p>
-    <p>check out my favourite websites</p>
-    <BUtton><a href="https://www.google.com">click to open</a></BUtton>
-    <button><a href="https://web.facebook.com/login/?_rdc=1&_rdr#">click to open facebook</a></button>
+<body style="background-color: darkslategray;">
+    <h1 style="text-align: center;">C-V</h1>
+    <h1 style="text-align: center;"> <span style="color:whitesmoke;">ADIAMO BANKOLE</span></h1>
+    <h3>My Name is Bankole, i am a student of execute tech academy</h3>
+    <h3>i am here to learn about front-end</h3>
+    <h3>I like to think that I’m a very flexible and resourceful person. Even when things change at the last minute,<br> I’m able to adjust accordingly and meet tight deadlines. At my last job, the schedule was constantly changing, <br>so I needed to be highly adaptable. Despite the chaotic environment, I always finished tasks on time.</h3>
+    <h3>I am a hard-working and driven individual who isn’t afraid to face a challenge.
+    <br>I’m passionate about my work and I know how to get the job done.</h3>
+    <h3>I would say that I’m creative, hard-working, and detail-oriented.</h3>
+    <h3>check out my favourite websites</h3>
+    <hr>
+    <h3>I like to study new things. Being knowledgeable about (your field) or any subject is an ongoing process, <br>and I’m always proactive about seeking new opportunities to develop and grow in my role.<br>Those opportunities could be in the form of training, a conference, listening to a speaker, <br>or taking on a new project, but the motivation is to increase my knowledge of the field.</h3>
+    <BUtton><a href="https://www.google.com">click to open google</a></BUtton> <br>
+    <button><a href="https://web.facebook.com/login/?_rdc=1&_rdr#">click to open facebook</a></button> <br>
+    <img src="girl.jpeg" alt="screenshot" sizes="300" width="300">
     <hr>
     <h3>MY FAVOURITE SUBJECTS</h3>
     <ol>
