--- a/index.html
+++ b/index.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first leanering page</title>
 </head>
-<body>
-<h1>THIS IS MY PAGE</h1>  
-<h2>THIS IS MY PAGE</h2> 
-<h3>THIS IS MY PAGE</h3> 
-<h4>THIS IS MY PAGE</h4>
-<h5>THIS IS MY PAGE</h5>
-<h6>THIS IS MY PAGE</h6>
-<P>this is my first pharagraph</P>
-<p>this is my second pharagraph</p>
-<a href="https://pngtree.com/freepng/modern-laptop-computer-with-screen-open-technology-digital-device_21059292.html">click to open</a>
-<p><b></b></p>
-<img src="car.png" alt="car from file" sizes="100" width="200" >
-<img src="girl.jpeg" alt="screenshot" sizes="200" width="200">
+
+<body style="background-color: crimson;">
+    <div style="background-color: darkblue;">
+        <h1 style="font-family: 'Courier New', Courier, monospace;">THIS IS MY PAGE</h1>
+        <h2 style="text-align: center;">THIS IS MY PAGE</h2>
+        <h3>THIS IS MY PAGE</h3>
+        <h4>THIS IS MY PAGE</h4>
+        <h5>THIS IS MY PAGE</h5>
+        <h6>THIS IS MY PAGE</h6>
+    </div>
+    <P>this is my first <span style="color: blue;">pharagraph</span></P>
+    <p>this is my second <br>
+        pharagraph</p>
+    <a
+        href="https://pngtree.com/freepng/modern-laptop-computer-with-screen-open-technology-digital-device_21059292.html">click
+        to open</a>
+    <p><b></b></p>
+    <img src="car.png" alt="car from file" sizes="100" width="200">
+    <br>
+    <img src="girl.jpeg" alt="screenshot" sizes="200" width="200">
 </body>
+
 </html>
