i want to commit all files

--- a/About.html
+++ b/About.html
@@ -7,38 +7,50 @@
     <title>Document about me </title>
 </head>
 
-<body style="background-color: darkslategray;">
+<body style="background-color: darkslategrey; color: chartreuse;">
     <h1 style="text-align: center;">C-V</h1>
-    <h1 style="text-align: center;"> <span style="color:whitesmoke;">ADIAMO BANKOLE</span></h1>
-    <h3>My Name is Bankole, i am a student of execute tech academy</h3>
+    <h1 style="text-align: center;"> <span style="color:white;">ADIAMO BANKOLE</span></h1>
+    <h3>My name is <span style="color:white;">Bankole</span>,
+        <br>I am a student of execute tech academy
+    </h3>
     <h3>i am here to learn about front-end</h3>
-    <h3>I like to think that I’m a very flexible and resourceful person. Even when things change at the last minute,<br> I’m able to adjust accordingly and meet tight deadlines. At my last job, the schedule was constantly changing, <br>so I needed to be highly adaptable. Despite the chaotic environment, I always finished tasks on time.</h3>
+    <h3>I like to think that I’m a very flexible and resourceful person. Even when things change at the last minute,<br>
+        I’m able to adjust accordingly and meet tight deadlines. At my last job, the schedule was constantly changing,
+        <br>so I needed to be highly adaptable. Despite the chaotic environment, I always finished tasks on time.
+    </h3>
     <h3>I am a hard-working and driven individual who isn’t afraid to face a challenge.
-    <br>I’m passionate about my work and I know how to get the job done.</h3>
+        <br>I’m passionate about my work and I know how to get the job done.
+    </h3>
     <h3>I would say that I’m creative, hard-working, and detail-oriented.</h3>
     <h3>check out my favourite websites</h3>
     <hr>
-    <h3>I like to study new things. Being knowledgeable about (your field) or any subject is an ongoing process, <br>and I’m always proactive about seeking new opportunities to develop and grow in my role.<br>Those opportunities could be in the form of training, a conference, listening to a speaker, <br>or taking on a new project, but the motivation is to increase my knowledge of the field.</h3>
+    <h3>I like to study new things. Being knowledgeable about (your field) or any subject is an ongoing process, <br>and
+        I’m always proactive about seeking new opportunities to develop and grow in my role.<br>Those opportunities
+        could be in the form of training, a conference, listening to a speaker, <br>or taking on a new project, but the
+        motivation is to increase my knowledge of the field.</h3>
     <BUtton><a href="https://www.google.com">click to open google</a></BUtton> <br>
     <button><a href="https://web.facebook.com/login/?_rdc=1&_rdr#">click to open facebook</a></button> <br>
     <img src="girl.jpeg" alt="screenshot" sizes="300" width="300">
     <hr>
-    <h3>MY FAVOURITE SUBJECTS</h3>
-    <ol>
-        <li>English</li>
-        <li>mathemathics</li>
-        <li>biology</li>
-        <li>civic education</li>
-    </ol>
+    <div style="font: 50000; font-family:'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
+        <h3>MY FAVOURITE SUBJECTS</h3>
+        <ol>
+            <li>English</li>
+            <li>mathemathics</li>
+            <li>biology</li>
+            <li>civic education</li>
+        </ol>
+        <hr>
+        <h3>OTHER SUBJECTS</h3>
+        <ul>
+            <li>computer science</li>
+            <li>history</li>
+            <li>christian religious studies</li>
+            <li>basic tech</li>
+        </ul>
+    </div>
     <hr>
-    <h3>OTHER SUBJECTS</h3>
-    <ul>
-        <li>computer science</li>
-        <li>history</li>
-        <li>christian religious studies</li>
-        <li>basic tech</li>
-    </ul>
-    <hr>
-    <button>click for more info</button>
+    <button></a>click for more info</button>
 </body>
+
 </html>
