i want to commit all

--- a/form.index.html
+++ b/form.index.html
@@ -19,7 +19,7 @@
             <br>
             <label for="email">YOUR EMAIL: <span style="color: crimson;">*</span></label>
             <br>
-            <input id="email" name="el" type="email" placeholder=" your-email">
+            <input id="email" name="email" type="email" placeholder=" your-email">
             <br>
             <p>Are you a client? <span style="color: crimson;">*</span></p>
             <input type="checkbox" name="yes" id="yes">
