--- a/me.html
+++ b/me.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>form</title>
 </head>
+
 <body>
     <!-- i am creating a form -->
-<hr>
+    <hr>
+    <form action="fill form">
+        <div class="field" style="font-size: larger; text-align: justify;">
 
+            <p>
+            <h1>TYPE FORM</h1>
+            <br>Get better data with conversational forms,
+            <br>surveys, quizzes and more.
+            </p>
+            <input id="email" name="email" type="email" placeholder="sign up with goggle"
+                style="width: 500px; height: 30px;">
+            <br>
+            <br>
+            <input type="microsoft email" name="microsoft email" id="microsoft email"
+                placeholder=" sign up with microsoft" style="width: 500px; height: 30px;">
+            <p> <span style="">cookie consent</span>
+                <br> we use our own and third-party coolies to show you more relevant content based on you browing
+                <br>
+                and navigation history. please acceptor manageyour cookie settings below. here`s our cookie policy
+            </p>
+            <div style="margin-left: 200px;"> OR</div>
+            <button type="button" style="width: 500px; height: 40px;">Accept all cookies</button>
+        </div>
+    </form>
+</body>
 
 </html>
