i want to commit this

--- a/me.html
+++ b/me.html
@@ -5,6 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>form</title>
+      <style>
+    h1 {
+      color: blue;
+      text-align: center;
+    }
+    p {
+      color: gray;
+      font-size: 16px;
+    }
+</style>
 </head>
 
 <body>
@@ -24,7 +34,7 @@
             <br>
             <input type="microsoft email" name="microsoft email" id="microsoft email"
                 placeholder=" sign up with microsoft" style="width: 500px; height: 30px;">
-            <p> <span style="">cookie consent</span>
+            <p> <span style="color: brown;">cookie consent</span>
                 <br> we use our own and third-party coolies to show you more relevant content based on you browing
                 <br>
                 and navigation history. please acceptor manageyour cookie settings below. here`s our cookie policy
