--- a/About.html
+++ b/About.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document about me </title>
+    <title>Document About Me </title>
 </head>
 
 <body style="background-color: darkslategrey; color: chartreuse;">
