--- a/me.html
+++ b/me.html
@@ -5,16 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>form</title>
-      <style>
-    h1 {
-      color: blue;
-      text-align: center;
-    }
-    p {
-      color: gray;
-      font-size: 16px;
-    }
-</style>
 </head>
 
 <body>
@@ -35,9 +25,9 @@
             <input type="microsoft email" name="microsoft email" id="microsoft email"
                 placeholder=" sign up with microsoft" style="width: 500px; height: 30px;">
             <p> <span style="color: brown;">cookie consent</span>
-                <br> we use our own and third-party coolies to show you more relevant content based on you browing
+                <br> we use our own and third-party coolies to show you more relevant content based on you browsing
                 <br>
-                and navigation history. please acceptor manageyour cookie settings below. here`s our cookie policy
+                and navigation history. please acceptor manage your cookie settings below. here`s our cookie policy
             </p>
             <div style="margin-left: 2=00px;"> OR</div>
             <button type="button" style="width: 500px; height: 40px;">Accept all cookies</button>
