--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
 <body style="background-color: crimson;">
     <div style="background-color: darkblue;">
         <h1 style="font-family: 'Courier New', Courier, monospace;">THIS IS MY PAGE</h1>
-        <h2 style="text-align: center;">THIS IS MY PAGE</h2>
+        <h2>THIS IS MY PAGE</h2>
         <h3>THIS IS MY PAGE</h3>
         <h4>THIS IS MY PAGE</h4>
         <h5>THIS IS MY PAGE</h5>
         <h6>THIS IS MY PAGE</h6>
     </div>
     <P>this is my first <span style="color: blue;">pharagraph</span></P>
-    <p>this is my second <br>
-        pharagraph</p>
+    <p>this is my second <span style="color: blue;">pharagraph</span></p>
     <a
         href="https://pngtree.com/freepng/modern-laptop-computer-with-screen-open-technology-digital-device_21059292.html">click
         to open</a>
