--- a/my-blog.html
+++ b/my-blog.html
@@ -11,39 +11,52 @@
 <body>
     <h1 style="color: blue; text-align: center;">WELCOME TO MY BLOG</h1>
     <hr>
-
     <p>sharing my journey in tech and life</P>
-    <h6>About me latest posts join us</h6>
-    <h1>About Me</h1>
+    <nav>
+        <ul>
+            <a href="#about-me">About me</a>
+            <a href="#latest-post">Latest Post</a>
+            <a href="#join-us">Join us</a>
+        </ul>
+    </nav>
     <hr>
-    <p style="font-style: italic;">hello! My Name is Alex. i`m learning web development and love writing about <span
-            style="background-color: yellow;">HTML,CSS </span>and everything frontend.
-    </p>
-    <h1>Latest Post</h1>
-    <hr>
-    <ol>
-        <li> why i started learning web development</li>
-        <li style="background-color: yellow; font-weight: bold;">my Top 3 favorite coding Resources</li>
-        <li>building my first web page </li>
-    </ol>
-    <p> want to read more? <a href="https://www.google.com">visit my full blog</a>
-    </p>
-    <h1>join my newsletter</h1>
-    <hr>
-    <label for="name">Name:</label>
-    <br>
-    <input type="name" id="name" name="name" placeholder="Enter Your Name" style="width: 350px; height: 30px;">
-    <br>
-    <label for="email">Email:</label>
-    <br>
-    <input type="email" id="email" name="email" placeholder="Enter your email"
-        style="width: 350px;height: 30px;border-color: blueviolet;">
-    <br>
-    <label for="new_text">why do you want to join?</label>
-    <br>
-    <input type="text" name="text" id="text" style="width: 200px; height: 70px;">
-    <br>
-    <button type="button" style="background-color: yellow;">sign up</button>
+    <section id="about-me">
+        <h1>About Me</h1>
+        <hr>
+        <p style="font-style: italic;">hello! My Name is Alex. i`m learning web development and love writing about <span
+                style="background-color: yellow;">HTML,CSS </span>and everything frontend.
+        </p>
+    </section>
+
+    <section id="latest-post">
+        <h1>Latest Post</h1>
+        <hr>
+        <ol>
+            <li> why i started learning web development</li>
+            <li style="background-color: yellow; font-weight: bold;">my Top 3 favorite coding Resources</li>
+            <li>building my first web page </li>
+        </ol>
+        <p> want to read more? <a href="https://www.google.com">visit my full blog</a>
+        </p>
+    </section>
+    <section id=" join-us">
+        <h1>join my newsletter</h1>
+        <hr>
+        <label for="name">Name:</label>
+        <br>
+        <input type="name" id="name" name="name" placeholder="Enter Your Name" style="width: 350px; height: 30px;">
+        <br>
+        <label for="email">Email:</label>
+        <br>
+        <input type="email" id="email" name="email" placeholder="Enter your email"
+            style="width: 350px;height: 30px;border-color: blueviolet;">
+        <br>
+        <label for="new_text">why do you want to join?</label>
+        <br>
+        <input type="text" name="text" id="text" style="width: 200px; height: 70px;">
+        <br>
+        <button type="button" style="background-color: yellow;">sign up</button>
+    </section>
 
 </body>
 
