--- a/CSS/my_page.html
+++ b/CSS/my_page.html
@@ -4,13 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to my Page</title>
+    <link rel="stylesheet" href="pag.css">
 </head>
 <body>
-    <h1>About me</h1>
+    <h1>Welcome to My Page</h1>
+    <h2>About me</h2>
     <p>Hi,my name is Bankole, I love coding and learning new technologies</p>
-    i also enjoy reading, traveling and playing video games.
-    <h1>My Hobbies</h1>
-    <button>Reading</button>
-    
-</body>
+    <p id="container">
+      i also enjoy reading, traveling and playing video games.
+    </p>
+    <h2>My Hobbies</h2>
+    <button style="background-color: aqua">Reading</button>
+    <button style="background-color: aqua">Gaming</button>
+    <button style="background-color: aqua">Cooking</button>
+    <br />
+    <br />
+    <h4 id="nigeria">
+      <label id="name"
+        >This is my special box area styled with the CSS box model
+      </label>
+    </h4>
+  </body>
 </html>
