--- a/html/my-blog.html
+++ b/html/my-blog.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my Blog</title>
-    <link rel="stylesheet" href="my-blog.css">
+    <link rel="stylesheet" href="/CSS/my-blog.css">
 </head>
 
 <body>
     <h1 style="color: blue; text-align: center;">WELCOME TO MY BLOG</h1>
     <hr>
     <p>sharing my journey in tech and life</P>
-    <nav>
+    <nav style="text-align: end;">
         <ul>
             <a href="#about-me">About me</a>
             <a href="#latest-post">Latest Post</a>
