--- a/html/game_verse.html
+++ b/html/game_verse.html
@@ -22,15 +22,18 @@
         </nav>
     </header>
     <hr>
-    <h1 style="text-align: center; font-size: 60px; font-family: system-ui;">Shadow Hunter</h1>
+    <h1 style="text-align: center; font-size: 60px; font-family: system-ui; ">Shadow Hunter</h1>
+    <br>
     <p style="text-align: center;font-family: system-ui; font-size: 25px; margin-top: -2%;">A deadly assassin with a
         mysterious past</p>
     <h2>Character stats</h2>
+    <br>
     <h2 id="box">Special Abilities</h2>
+    <br>
     <nav>
         <ul>
             <li>Health: 90/100</li>
-            <li>Strenght: 80/100</li>
+            <li>Strength: 80/100</li>
             <li>Speed: 75/100</li>
         </ul>
     </nav>
@@ -40,17 +43,17 @@
         <br>
 
         <input type="name" id="name" name="name" placeholder="Name"
-            style="width: 350px; height: 40px; background-color:rgba(34, 32, 32, 0.966)">
+            style="width: 350px; height: 40px; background-color:rgba(80, 80, 77, 0.400)" border-radius="50%">
         <br>
         <br>
         <input type="email" id="email" name="email" placeholder="Email"
-            style="width: 350px;height: 40px; background-color:rgba(34, 32, 32, 0.966)">
+            style="width: 350px;height: 40px; background-color:rgba(80, 80, 77, 0.400)">
         <br>
         <br>
         <input type="text" name="text" id="text" placeholder="Message"
-            style="width: 250px; height: 100px; background-color:rgba(34, 32, 32, 0.966)">
+            style="width: 250px; height: 100px; background-color:rgba(80, 80, 77, 0.400)">
         <br>
-        <button style=" color: azure; background-color:rgba(34, 32, 32, 0.966);">submit</button>
+        <button style=" color: azure; background-color:rgba(80, 80, 77, 0.400);">submit</button>
     </div>
     <hr>
     <h3>GameVerse</h3>
