--- a/html/game_verse.html
+++ b/html/game_verse.html
@@ -2,16 +2,16 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/CSS/verse.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Game-Verse</title>
+    <link rel="stylesheet" href="/CSS/verse.css" />
 </head>
 
 <body>
     <h3>GameVerse</h3>
-    <br>
-    <header style="text-align: end; margin-top: -3.9%;">
+    <br />
+    <header style="text-align: end; margin-top: -4%">
         <nav>
             <ul>
                 <a href="http://Home">Home</a>
@@ -21,43 +21,57 @@
             </ul>
         </nav>
     </header>
-    <hr>
-    <h1 style="text-align: center; font-size: 60px; font-family: system-ui; ">Shadow Hunter</h1>
-    <br>
-    <p style="text-align: center;font-family: system-ui; font-size: 25px; margin-top: -2%;">A deadly assassin with a
-        mysterious past</p>
+    <hr />
+    <div class="city">
+        <h1> SHADOW HUNTER</h1>
+        <H5> A deadly assassin with a mysterious past</H5>
+    </div>
+    <button id="card"> Play Now</button>
     <h2>Character stats</h2>
-    <br>
+    <br />
     <h2 id="box">Special Abilities</h2>
+    <br />
     <br>
-    <nav>
+    <div class="strong">
         <ul>
             <li>Health: 90/100</li>
             <li>Strength: 80/100</li>
             <li>Speed: 75/100</li>
         </ul>
-    </nav>
+    </div>
     <h2>Join the Battle</h2>
     <div>
-        <br>
-        <br>
+        <br />
+        <br />
 
-        <input type="name" id="name" name="name" placeholder="Name"
-            style="width: 350px; height: 40px; background-color:rgba(80, 80, 77, 0.400)" border-radius="50%">
+        <input type="name" id="name" name="name" placeholder="Name" style="
+          width: 350px;
+          height: 40px;
+          background-color: rgba(80, 80, 77, 0.4);
+        " border-radius="50%" />
+        <br />
+        <br />
+        <input type="email" id="email" name="email" placeholder="Email" style="
+          width: 350px;
+          height: 40px;
+          background-color: rgba(80, 80, 77, 0.4);
+        " />
+        <br />
+        <br />
+        <input type="text" name="text" id="text" placeholder="Message" style="
+          width: 250px;
+          height: 100px;
+          background-color: rgba(80, 80, 77, 0.4);
+        " />
+
+        <br />
         <br>
-        <br>
-        <input type="email" id="email" name="email" placeholder="Email"
-            style="width: 350px;height: 40px; background-color:rgba(80, 80, 77, 0.400)">
-        <br>
-        <br>
-        <input type="text" name="text" id="text" placeholder="Message"
-            style="width: 250px; height: 100px; background-color:rgba(80, 80, 77, 0.400)">
-        <br>
-        <button style=" color: azure; background-color:rgba(80, 80, 77, 0.400);">submit</button>
+        <button type="submit" id="sub">Submit</button>
     </div>
-    <hr>
+    <hr />
     <h3>GameVerse</h3>
-    <footer> <a href="https://x.com/login">Twitter</a>
+    <footer>
+        <a href="https://x.com/login">Twitter</a>
         <a href="https://discord.com/">Discord</a>
     </footer>
 </body>
