--- a/html/game_verse.html
+++ b/html/game_verse.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <h3>GameVerse</h3>
-    <br />
-    <header style="text-align: end; margin-top: -4%">
+
+    <header class="nav-bar">
+        <h3>GameVerse</h3>
         <nav>
             <ul>
                 <a href="http://Home">Home</a>
