--- a/html/game_verse.html
+++ b/html/game_verse.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <header class="nav-bar">
+    <header class="navbar">
         <h3>GameVerse</h3>
         <nav>
             <ul>
@@ -21,17 +21,14 @@
             </ul>
         </nav>
     </header>
-    <hr />
+
     <div class="city">
-        <h1> SHADOW HUNTER</h1>
-        <H5> A deadly assassin with a mysterious past</H5>
+        <h2> Shadow Hunter</h2>
+        <p> A deadly assassin with a mysterious past</p>
     </div>
-    <button id="card"> Play Now</button>
+    <button id="button"> Play Now </button>
+
     <h2>Character stats</h2>
-    <br />
-    <h2 id="box">Special Abilities</h2>
-    <br />
-    <br>
     <div class="strong">
         <ul>
             <li>Health: 90/100</li>
